Viewsaurus breaks on empty data-file attribute.

--- a/tutorial/chapter1.jade
+++ b/tutorial/chapter1.jade
@@ -1,4 +1,4 @@
-.step(data-title='Introduction', data-file='', data-highlight='')
+.step(data-title='Introduction', data-file='package.json', data-highlight='')
 :markdown
   ### How It Works
 
