--- a/tutorial/chapter2.jade
+++ b/tutorial/chapter2.jade
@@ -1,6 +1,6 @@
 .step(data-title='The Voice Interview Loop', data-file='routes/voice.js', data-highlight='')
   :markdown
-    ### The Voice Interview Loop
+    ## The Voice Interview Loop
 
     It is helpful to visualize your interaction with a user during a survey as a loop. The chart below traces the flow of a user's phone call to your Twilio number to participate in the survey (click it to make it bigger):
 
@@ -12,7 +12,7 @@
 
 .step(data-title='Responding to a Phone Call', data-file='routes/voice.js', data-highlight='')
   :markdown
-    ### Responding to a Phone Call
+    ## Responding to a Phone Call
 
     ![Survey Flow Chart](//s3.amazonaws.com/howtodocs/flowchart2.png)
 
@@ -26,7 +26,7 @@
 
 .step(data-title='Responding to a Phone Call', data-file='routes/voice.js', data-highlight='5-9')
   :markdown
-    ### Responding to a Phone Call
+    ## Responding to a Phone Call
 
     ![Survey Flow Chart](//s3.amazonaws.com/howtodocs/flowchart3.png)
 
@@ -40,7 +40,7 @@
 
 .step(data-title='Asking a Question', data-file='routes/voice.js', data-highlight='11-48')
   :markdown
-    ### Asking a Question
+    ## Asking a Question
 
     ![Survey Flow Chart](//s3.amazonaws.com/howtodocs/flowchart4.png)
 
@@ -50,7 +50,7 @@
 
 .step(data-title='Asking a Question', data-file='routes/voice.js', data-highlight='50-75')
   :markdown
-    ### Asking a Question
+    ## Asking a Question
 
     ![Survey Flow Chart](//s3.amazonaws.com/howtodocs/flowchart4.png)
 
@@ -62,7 +62,7 @@
 
 .step(data-title='Updating Conversation State', data-file='routes/voice.js', data-highlight='22-27')
   :markdown
-    ### Updating Conversation State
+    ## Updating Conversation State
 
     ![Survey Flow Chart](//s3.amazonaws.com/howtodocs/flowchart5.png)
 
@@ -74,7 +74,7 @@
 
 .step(data-title='The Mongoose Schema', data-file='models/SurveyResponse.js', data-highlight='1-16')
   :markdown
-    ### The Mongoose Schema
+    ## The Mongoose Schema
 
     ![Survey Flow Chart](//s3.amazonaws.com/howtodocs/flowchart5.png)
 
@@ -87,7 +87,7 @@
 
 .step(data-title='Storing Responses', data-file='models/SurveyResponse.js', data-highlight='52-77')
   :markdown
-    ### Storing Responses
+    ## Storing Responses
 
     ![Survey Flow Chart](//s3.amazonaws.com/howtodocs/flowchart5.png)
 
@@ -95,7 +95,7 @@
 
 .step(data-title='Queueing Up the Next Question', data-file='models/SurveyResponse.js', data-highlight='75-91')
   :markdown
-    ### Queueing Up the Next Question
+    ## Queueing Up the Next Question
 
     ![Survey Flow Chart](//s3.amazonaws.com/howtodocs/flowchart6.png)
 
