--- a/tutorial/chapter3.jade
+++ b/tutorial/chapter3.jade
@@ -10,7 +10,7 @@
   :markdown
     ## Playing Twilio Recordings
 
-    In the JavaScript that dynamically inserts the recording links into the page, we open the same `RecordingUrl` sent to us from Twilio in a new window. This works well enough, but you might consider playing them directly on the page with a more robust audio library like [Buzz](http://buzz.jaysalvat.com/).  When preparing the recordings to be played via HTML 5 audio, note that each recording is made available [in either WAV or MP3 formats](https://www.twilio.com/docs/api/twiml/record#attributes-action-parameters).
+    In the JavaScript that dynamically inserts the recording links into the page, we open the same `RecordingUrl` sent to us from Twilio in a new window. This works well enough, but you might consider playing them directly on the page with a more robust audio library like [Buzz](//buzz.jaysalvat.com/).  When preparing the recordings to be played via HTML 5 audio, note that each recording is made available [in either WAV or MP3 formats](//www.twilio.com/docs/api/twiml/record#attributes-action-parameters).
 
 .step(data-title='All Done!', data-file='public/index.js', data-highlight='')
   :markdown
